fix: troller relations
